<resources>
    <string name="app_name">Dex</string>
    <string name="already_have_an_account">Already have an account?</string>

    <string name="device_and_internet_exhaust_protection">Device and Internet Exhaust Protection</string>
    <string name="get_started">Get Started</string>
    <string name="email">Email</string>
    <string name="sign_up_for_free">Sign up for free</string>
    <string name="or_continue_with">or continue with</string>
    <string name="sign_up">Sign Up</string>

    <string name="email_or_phone_number">Email or Phone Number</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="create_an_account">Create an account</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone_number">Phone number</string>
    <string name="location">Location</string>
    <string name="next">Next</string>
    <string name="let_your_device_know_you_a_step_for_your_goal">Let your device know you. A step for your goal</string>
    <string name="verify_email">Verify Email</string>
    <string name="enter_the_verification_code_sent_to_abc_gmail_com">Enter the verification code sent to %1$s</string>
    <string name="resend">Resend</string>
    <string name="confirm">Confirm</string>
    <string name="congrats">Congrats!</string>
    <string name="your_profile_is_ready_to_use">Your profile is ready to use</string>
    <string name="dex_user_agreement">Dex user agreement</string>
    <string name="use_of_account">Use of account</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="internet_exhaust_protection">Internet Exhaust Protection</string>
    <string name="device_protection">Device Protection</string>
    <string name="would_you_like_to_see_which_services_we_recommend">Would you like to see which services we recommend?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="lets_start">Lets Start</string>
    <string name="_1_are_you_a_veteran">1. Are you a veteran?</string>
    <string name="continues">Continue</string>
    <string name="_2_do_you_have_family_deployed_overseas">2. Do you have family deployed overseas?</string>
    <string name="_3_how_long_have_you_been_in_your_current_job">3. How long have you been in your current job?</string>
    <string name="done">Done!</string>
    <string name="you_should_receive_an_email_about_our_recommended_services">You should receive an email about our recommended services</string>
    <string name="coming_soon">COMING SOON</string>
    <string name="scanning_your_device">Scanning your device....</string>
    <string name="cancel">Cancel</string>
    <string name="scan_device_results">Scan Device Results</string>
    <string name="_3_suspicious_apps_found">3 Suspicious Apps found:</string>
    <string name="go_back">Go Back</string>
    <string name="heuristics_scan_results">Heuristics Scan Results</string>
    <string name="profile">Profile</string>
    <string name="stores">Stores</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="youwantlogout">Are you sure you want to logout?</string>
    <string name="menu">Menu</string>
    <string name="internet_profile_subscription">Internet Profile Subscription</string>
    <string name="your_security_comes_first">Your security comes first!</string>
    <string name="follow_these_steps_to_remove_bad_apps">Follow these steps to remove bad apps:</string>
    <string name="senses">Senses</string>
    <string name="available_data">Available Data</string>
    <string name="crime">Crime</string>
    <string name="weather">Weather</string>
    <string name="disease">Disease</string>
    <string name="emi_pollution">EMI Pollution</string>
    <string name="allergy">Allergy</string>
    <string name="configure_your_preferences">Configure your preferences</string>
    <string name="_1_aoc_type">1. AOC Type:</string>
    <string name="fire">Fire</string>
    <string name="add_new">Add New</string>
    <string name="report_aoc_type">Report AOC Type</string>
    <string name="comment">Comment</string>
    <string name="add_comments">Add Comments..</string>
    <string name="home">Home</string>
    <string name="protection">Protection</string>
    <string name="services">Services</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="external_scan">External Scan</string>
    <string name="get_internet_profile">Get Internet Profile</string>
    <string name="heuristics_device">Heuristics Device</string>
    <string name="network_watch">Network watch</string>
    <string name="looking_for_data">Looking for Data</string>
    <string name="emi_pollution_2">EMI POLLUTION</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="sign_in">Sign In</string>
    <string name="dont_have_an_account">Dont have an account?</string>


    <!--    Google Signing Page-->
    <string name="str_client_id">client_id</string>
    <string name="str_client_secret">client_seceret</string>
    <string name="str_grant_type">authorization_code</string>
    <string name="str_google_oth">https://oauth2.googleapis.com/token</string>

    <!--    Facebook Signing Page-->
    <string name="facebook_app_id">123</string>
    <string name="fb_login_protocol_scheme">123</string>
    <string name="facebook_client_token">123</string>


    <string name="str_breezometer">ENTER_DEMO_KEY</string>
    <string name="mapbox_access_token">DEMO_KEY</string>

    <string name="counter">Please wait %2d seconds.</string>
    <string name="strFinish">Finish</string>
    <string name="strSubmit">Submit</string>
    <string name="back_to_otp">Re enter Otp</string>
    <string name="str_enter_email">Enter Email</string>
    <string name="str_password">Password</string>
    <string name="str_cof_password">Confirm Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_new_pw">alphanumeric password with 8 characters including uppercase and 1 special character</string>
    <string name="str_invalid_password">Password should have at least one numerical digit(0–9).\n Password\'s length should be in between 8 to 15 characters.\n Password should have at least one lowercase letter(a-z).\n Password should have at least one uppercase letter(A-Z).\n Password should have at least one special character ( @, #, %, &amp;, !, \$, *).</string>
    <string name="str_not_ava">Currently not available</string>
    <string name="tsr_box_text">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</string>
</resources>
