<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CreateAccountActivity">

    <ImageView
        android:id="@+id/back"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/back" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/logo" />

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_below="@id/image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"

        android:orientation="horizontal">

        <ImageView


            android:layout_width="12dp"
            android:layout_height="12dp"

            android:src="@drawable/deesmall" />

        <ImageView
            android:layout_width="12dp"
            android:layout_height="12dp"

            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"

            android:src="@drawable/esmall" />

        <ImageView


            android:layout_width="12dp"
            android:layout_height="12dp"

            android:src="@drawable/xsmall" />


    </LinearLayout>

    <TextView
        android:id="@+id/two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:text="2"
        android:textColor="#ECC22F"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/ofThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/two"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:text="of 3"
        android:textColor="@color/black"
        android:textSize="10sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/ofThree"
        android:layout_marginTop="70dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/create_an_account"
            android:textColor="#1E265C"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/let_your_device_know_you_a_step_for_your_goal"
            android:textColor="#1E265C"
            android:textSize="10sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_first_name"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@drawable/rounded_brown"
            android:hint="@string/first_name"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:singleLine="true"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/edt_last_name"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_brown"
            android:hint="@string/last_name"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:singleLine="true"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/edt_phone_number"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_brown"
            android:hint="@string/phone_number"
            android:inputType="number"
            android:maxLength="10"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:singleLine="true"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/edt_location"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_brown"
            android:hint="@string/location"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:singleLine="true"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/next"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_blue"
            android:gravity="center"
            android:text="@string/next"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>