<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1B2779"
    tools:context=".activity.SplashActivity">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="88dp"
        android:layout_height="91dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="184dp"
        android:src="@drawable/logo" />

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="47dp"
            android:layout_height="61dp"
            android:src="@drawable/dee" />

        <ImageView
            android:layout_width="47dp"
            android:layout_height="61dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/eee" />

        <ImageView
            android:layout_width="57dp"
            android:layout_height="61dp"
            android:src="@drawable/xxx" />

    </LinearLayout>

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear1"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/device_and_internet_exhaust_protection"
        android:textColor="@color/white" />

    <LinearLayout
        android:id="@+id/ll_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/started"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_corner"
            android:elevation="10dp"
            android:gravity="center"
            android:text="@string/get_started"
            android:textAlignment="center"
            android:textColor="#1E265C"
            android:textSize="12sp" />

        <LinearLayout
            android:id="@+id/noaccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginBottom="70dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/signinsplash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/sign_in"
                android:textColor="#ECC22F" />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>