<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.OptionalRiskAssessmentActivity">

    <ImageView
        android:id="@+id/back"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/back" />


    <ImageView
        android:id="@+id/secondlogo"
        android:layout_width="174dp"
        android:layout_height="121dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="161dp"
        android:src="@drawable/secondlogo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/secondlogo"
        android:layout_marginTop="40dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/would_you_like_to_see_which_services_we_recommend"
            android:textAlignment="center"
            android:textColor="#1E265C"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/no"
                android:layout_width="128dp"
                android:layout_height="36dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/rounded_blue"
                android:gravity="center"
                android:text="@string/no"
                android:elevation="10dp"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/yes"
                android:layout_width="128dp"
                android:layout_height="36dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="50dp"
                android:background="@drawable/rounded_yellow"
                android:gravity="center"
                android:text="@string/yes"
                android:elevation="10dp"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>